--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass-loader": "^10.1.1",
     "vue": "^2.6.12",
     "vue-i18n": "^8.22.4",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
