--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^5.0.0",
+    "sass": "^1.53.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
